--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <div class="row col s12">
-                    <button class="btn waves-effect waves-light" ng-click="reset_password_pressed()">Reset</button>
+                    <button class="btn waves-effect waves-light" ng-click="password_reset_change_pressed()">Reset</button>
                 </div>
             </form>
         </div>
