confirm email card on profile

--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -4,7 +4,7 @@
     <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <div>
         <div id="scrollspyMenu" class="col s12 m12 l2 hide-on-med-and-down pushpin pushpin-demo-nav"
-            style="position:fixed; padding-top: 100px">
+            style="position:fixed; padding-top: 200px">
             <ul class="section table-of-contents">
                 <li><a class="lien_projet" href="#profileCard">Profile</a></li>
                 <li><a class="lien_projet" href="#inboxCard" ng-show="false">Inbox</a></li>
@@ -13,6 +13,12 @@
             </ul>
         </div>
     </div>
+    <div class="card red lighten-2" style="margin-top: 14px;">
+            <div class="card-content">
+                <p>Please confirm your email address</p>
+                <a class="waves-effect btn-flat red lighten-3 right" style="margin-top: -30px;">Confirm email</a>
+            </div>
+        </div>
     <div id="profileContent" class="col s12 m12 l10">
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------------------- Profile --------------------------------------------------------------------------------- -->
