signup ui removed control

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -119,9 +119,9 @@
                 </div>
             </form>
         </div>
-        <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
-        <!-- ----------------------------------------------------------- Sign Up Form ------------------------------------------------------------------------ -->
-        <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
+        <!-- -------------------------------------------------------------------------------- -->
+        <!-- ------------------- Sign Up Form ----------------------------------------------- -->
+        <!-- -------------------------------------------------------------------------------- -->
         <div class="row faster" id="signUpForm" ng-show="show_sign_up">
             <div class="row">
                 <h4>Sign Up</h4>
