add toast when non-validated #102

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -11,6 +11,7 @@
 		window.password_reset_token = "{{ password_reset_token }}";
 		window.reset_signup_username = "{{ reset_signup_username }}";
 		window.reset_signup_email = "{{ reset_signup_email }}";
+		window.user_is_validated =  {% if user_is_validated %}true;{% else %}false;{% endif %} 
 		window.OBC_PORT = {{ port }};
 		window.OBC_CONTROLLER_URL = "{{controller_url}}";
 		window.OBC_OS_CHOICES = {{ os_choices | safe }};
