confirm email toast

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -109,8 +109,8 @@
                 </div>
                 <!-- Forgot password form -->
                 <div class="row col s12" style="margin: 0px; padding: 0px;">
-                    <div class="col s12" ng-show="signup_forgot_password_show">
-                        <p>Please enter your email address below and we'll send you a link to reset your password</p>
+                    <div class="col s12" ng-show="signup_forgot_password_show" style="margin: 0px; padding: 0px;">
+                        <p style="padding-left: 11px;">Please enter your email address below and we'll send you a link to reset your password</p>
                         <div class="input-field col s6">
                             <label for="forgotPasswordEmail">Please enter your email</label>
                             <input id="forgotPasswordEmail" type="email" class="validate" ng-model="reset_password_email">
