added profile created_at #101

--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -64,7 +64,7 @@
                                             <label for="profileEmail">Email</label>
                                         </div>
                                         <div class="input-field col s12">
-                                            <input id="profileMember" type="text" class="validate" disabled value="10/10/10">
+                                            <input id="profileMember" type="text" class="validate" ng-model="profile_created_at" disabled>
                                             <label for="profileMember">Member Since</label>
                                         </div>
                                         <div class="input-field col s12">
