rephrase reset your password message

--- a/OpenBioC/app/templates/app/navbar2.html
+++ b/OpenBioC/app/templates/app/navbar2.html
@@ -110,7 +110,7 @@
                 <!-- Forgot password form -->
                 <div class="row col s12" style="margin: 0px; padding: 0px;">
                     <div class="col s12" ng-show="signup_forgot_password_show" style="margin: 0px; padding: 0px;">
-                        <p style="padding-left: 11px; margin-bottom: 0px;">Please enter your email address below and we'll send you a link to reset your password</p>
+                        <p style="padding-left: 11px; margin-bottom: 0px;">Please enter your email address below. An email will be sent to you to reset your password.</p>
                         <div class="input-field input-group col s12" style="display: table; margin-bottom: 0px;">
                             <input id="forgotPasswordEmail" type="text" class="validate" style="display: table-cell;" ng-model="reset_password_email">
                             <label for="forgotPasswordEmail" class="">Email</label>
