--- a/OpenBioC/app/templates/app/profile.html
+++ b/OpenBioC/app/templates/app/profile.html
@@ -3,7 +3,7 @@
     <!-- -------------------------------------------------------------- ScrollSpy ------------------------------------------------------------------------ -->
     <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <div>
-        <div id="scrollspyMenu" class="col s12 m12 l2 hide-on-med-and-down pushpin pushpin-demo-nav"
+        <div class="scrollspyMenu col s12 m12 l2 hide-on-med-and-down pushpin pushpin-demo-nav"
             style="position:fixed; padding-top: 200px">
             <ul class="section table-of-contents">
                 <li><a class="lien_projet" href="#profileCard">Profile</a></li>
@@ -19,7 +19,7 @@
                 <a class="waves-effect btn-flat red lighten-3 right" style="margin-top: -30px;" onclick="window.OBCUI.send_validation_mail()">Validate email</a>
             </div>
         </div>
-    <div id="profileContent" class="col s12 m12 l10">
+    <div id="profileContent" class="scrollspyContent col s12 m12 l10">
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------------------- Profile --------------------------------------------------------------------------------- -->
         <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
