--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -193,13 +193,19 @@
 
 		</div>
 
-		<div ng-show="profile_container_show">
-
+		<div ng-show="profile_container_show && false">
+			
 			<!-- PROFILE!! -->
 			{% include "app/profile.html" %}
-
+			
 			<!-- <a href ng-click="profile_save_pressed()">SAVE</a> -->
-
+			
+		</div>
+		
+		<!-- Documentation.html -->
+		
+		<div ng-show="profile_container_show">
+			{% include "app/documentation.html" %}
 		</div>
 
 
