--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -193,7 +193,7 @@
 
 		</div>
 
-		<div ng-show="profile_container_show && false">
+		<div ng-show="profile_container_show">
 			
 			<!-- PROFILE!! -->
 			{% include "app/profile.html" %}
@@ -204,7 +204,7 @@
 		
 		<!-- Documentation.html -->
 		
-		<div ng-show="profile_container_show">
+		<div ng-show="documentation_container_show">
 			{% include "app/documentation.html" %}
 		</div>
 
