--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -388,7 +388,7 @@
                 <!-- Buttons -->
                 <div class="row right-align">
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
-                        data-tooltip="Run" ng-click="workflow_info_run_pressed()"
+                        data-tooltip="See documentation on how to execute a workflow" ng-click="workflow_info_run_pressed()"
                         ng-disabled="workflows_info_editable">Run</a>
                     <a class="waves-effect waves-light btn tooltipped" style="margin-bottom:2px" data-position="bottom"
                         data-tooltip="Fit" ng-click="workflow_info_fit_pressed()">Fit</a>
