add news in the static website about bosc presentation

--- a/OpenBioC/static/templates/static/index_static_en.html
+++ b/OpenBioC/static/templates/static/index_static_en.html
@@ -341,6 +341,30 @@ http://www.tooplate.com/view/2098-health
                               <h2>Latest News</h2>
                          </div>
                     </div>
+					
+					 <div class="col-md-4 col-sm-6">
+                         <!-- NEWS THUMB -->
+                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
+						 <!--
+                              <a href="news-detail.html">
+                                   <img src="/static/static/static/images/news-image1.jpg" class="img-responsive" alt="">
+                              </a>
+						 -->
+                              <div class="news-info">
+                                   <span>July 24-25, 2019</span>
+                                   <h3><a href="https://www.open-bio.org/events/bosc/" target="_blank">BOSC 2019</a></h3>
+								   <br>
+								    <p>Poster presentation in Bioinformatics Open Source Conference (BOSC 2019).</p>
+                                   <div class="author">
+                                        <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
+                                        <div class="author-info">
+                                             <h5>OpenBio-C</h5>
+                                             <!--<p>CEO / Founder</p>-->
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
 
                     <div class="col-md-4 col-sm-6">
                          <!-- NEWS THUMB -->
