--- a/OpenBioC/static/templates/static/index_static_gr.html
+++ b/OpenBioC/static/templates/static/index_static_gr.html
@@ -381,6 +381,30 @@ http://www.tooplate.com/view/2098-health
                               <h2>Τελευταία Νέα</h2>
                          </div>
                     </div>
+					
+					 <div class="col-md-4 col-sm-6">
+                         <!-- NEWS THUMB -->
+                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
+						 <!--
+                              <a href="news-detail.html">
+                                   <img src="/static/static/static/images/news-image1.jpg" class="img-responsive" alt="">
+                              </a>
+						 -->
+                              <div class="news-info">
+                                   <span>24-25 Ιουλίου 2019</span>
+                                   <h3><a href="https://www.open-bio.org/events/bosc/" target="_blank">BOSC 2019</a></h3>
+								   <br>
+								    <p>Παρουσίαση πινακίδας εισήγησης (poster) στο συνέδριο Βιοπληροφορικής Ανοιχτού Κώδικα (Bioinformatics Open Source Conference - BOSC 2019).</p>
+                                   <div class="author">
+                                        <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
+                                        <div class="author-info">
+                                             <h5>OpenBio-C</h5>
+                                             <!--<p>CEO / Founder</p>-->
+                                        </div>
+                                   </div>
+                              </div>
+                         </div>
+                    </div>
 
                     <div class="col-md-4 col-sm-6">
                          <!-- NEWS THUMB -->
@@ -394,7 +418,7 @@ http://www.tooplate.com/view/2098-health
                                    <span>19 Φεβρουαρίου 2019</span>
                                    <h3><a href="#">OpenBioC ερωτηματολόγιο</a></h3>
                                    <a href="https://goo.gl/forms/dziu7R9bVQ6DzoKi1 " target="_blank"><p>https://goo.gl/forms/dziu7R9bVQ6DzoKi1 </p></a>
-								   <br>
+								   <br><br>
                                    <div class="author">
                                         <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
                                         <div class="author-info">
@@ -417,6 +441,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="news-info">
                                    <span>19 Ιανουαρίου 2019</span>
                                    <h3><a href="https://bibe2019.ics.forth.gr/" target="_blank">BIBE 2019 Conference</a></h3>
+								   <br><br><br>
                                    <p>19th annual IEEE International Conference on Bioinformatics and Bioengineering .</p>
                                    <div class="author">
                                         <!--<img src="/static/static/static/images/author-image.jpg" class="img-responsive" alt="">-->
